# KernelRCA

./: .gitignore  .gitmodules  README.md
dataset/: dataset_full.txt  dataset_succ.txt
dataset/crash_02ddd838cf42820dafc38008fdd3295a0167dae9/: config  fix
dataset/crash_12c0ee39a5513b9a22411937566238edde02bef5/: commit  config  fix
dataset/crash_15bf7d92374ccf44446d19de1fc0e11724b632a2/: config  fix
dataset/crash_16a7f16e9182bbfdbd2142306a82a41d4debb670/: commit  config  fix
dataset/crash_1708e7a511059b09d2d4136150d3e67ff9dcf25f/: commit  config  fix
dataset/crash_1bc76a5779300075e3466a0e2abcd753df212779/: commit  config  fix
dataset/crash_1f0cb39636774fcacd954ab0bd24a0ebf086e4e0/: commit  config  repro.c
dataset/crash_1fbcb607cf49d8b5a3c8e056971f045f9bfa34f3/: commit  config  fix
dataset/crash_2364bdc6bf567f4eff0a655872b67dca3b4fac56/: arch_x86_mm_fault_c.patch  commit  config  fix
dataset/crash_24a275e91595279d28038eb72a64fe00143fd2a4/: commit  config  fix  mm_kasan_report_c.patch
dataset/crash_26567b12e74b8791e1db50da6039ee1705e5a7ed/: commit  config  fix
dataset/crash_2c91a9ebeb17895972ec695b8349426d1904d7b3/: commit  config  fix  repro.c
dataset/crash_2e1c26930cc57edee80734ae71bf020493b32306/: commit  config  fix
dataset/crash_3674e1e163310d45ad3b0371f90b06b56af44697/: commit  config  fix
dataset/crash_36b975e34252647b1b3d5d8a164e4aae45bf6d60/: config  fix  repro.c
dataset/crash_37522d157c64b2776a89887789691990de93bd87/: commit  config  fix
dataset/crash_396fb46bd515837eaf6e5f542a3829f67757471a/: commit  config  fix
dataset/crash_3aacade388873fa82bd6d2efb6aaa9ab85964020/: commit  fix
dataset/crash_3d67d693e0529df8ac89ba55b00b54e5d967e021/: commit  config  fix
dataset/crash_3f6daa8df2d01d0560d3944fe06728c8c9ba5eff/: commit  config  fix
dataset/crash_41872265f1e3e0489eb0cc8762f8d48b3667afdb/: commit  config  fix  repro.c
dataset/crash_449f5619489cae8df8f71d2c6bf3675f4af9d6ce/: commit  config  fix
rca/: SetupConfig.py  configure_meta_projects.py  generate_functiontracer_config.py  patch_kernel.py  prepare_image_kernel.py  prepare_project.py  run.py  run_batch.py  syscall_table_h_generator.py
rca/analyzer/cpp/: CMakeLists.txt
rca/analyzer/cpp/include/: AnalyzeConfig.h  Exceptions.h  IRTranslator.h  TreeBuilder.h  graph.h  kallsyms.h  kernelimage.h  machine.h  rootcause.h  simulate.h  typeinfo.h  utils.h
rca/analyzer/cpp/libdwarf-0.4.1/: CMakeLists.txt  Makefile.in  aclocal.m4  config.h.in  configure
rca/analyzer/cpp/libdwarf-0.4.1/doc/: Makefile.in
rca/analyzer/cpp/libdwarf-0.4.1/src/lib/libdwarf/: CMakeLists.txt  Makefile.in
rca/analyzer/cpp/libdwarf-0.4.1/src/lib/libdwarfp/: CMakeLists.txt  Makefile.in
rca/analyzer/cpp/libdwarf-0.4.1/test/: Makefile.in
rca/analyzer/cpp/src/: IRTranslator.cc  RawTrace.proto  RootCauseAnalyzer.cc  SimuFunc.cc  SimuVex.cc  TaintEngine.cc  TraceSlicer.cc  TreeBuilder.cc  TypeInfo.cc  gen_code.py  machine.cc  trace.proto
rca/analyzer/cpp/vex/: Makefile-gcc
rca/analyzer/cpp/vex/priv/: guest_s390_toIR.c  main_util.h
rca/analyzer/cpp/vex/pub/: libvex.h  libvex_emnote.h  libvex_guest_amd64.h  libvex_guest_arm.h  libvex_ir.h
s2e/: s2e.yaml  s2e_activate
tools/: visualizer.py
(+266 files in other folders)
